--- a/app/src/main/res/layout/action_bar_top.xml
+++ b/app/src/main/res/layout/action_bar_top.xml
@@ -17,7 +17,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/button"
             android:background= "@android:color/transparent"
-            android:text="@string/filp"
+            android:text="@string/flip"
             android:layout_alignParentTop="true"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true" />
