--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#ffffffff">
+    android:layout_height="42dp"
+    android:background="#ffffffff"
+    android:gravity="center_vertical">
 
+    <!--TODO: Re-adjust the layout, make it fit the text and look good -->
     <TextView
         android:id="@+id/text"
         android:layout_width="wrap_content"
