--- a/app/src/main/res/layout/activity_flip.xml
+++ b/app/src/main/res/layout/activity_flip.xml
@@ -11,6 +11,15 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="GauchoLife Beta"
+        android:id="@+id/textView5"
+        android:layout_above="@+id/textView4"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Thanks for downloading!!!"
         android:id="@+id/textView4"
         android:layout_above="@+id/textView2"
         android:layout_centerHorizontal="true" />
@@ -19,28 +28,30 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Thanks for downloading!!!"
+        android:text="New features are coming!"
         android:id="@+id/textView2"
         android:layout_above="@+id/textView"
         android:layout_centerHorizontal="true" />
 
     <TextView
-        android:text="New features are coming!"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/textView" />
-
-    <TextView
+        android:text="Changelog: \n    This is version 0.8 \n    Bug '0015' is fixed since version 0.7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Known Issue: \n Some search suggestions will change after deleting the query text (If you encounter this problem, please close the search bar and search again.)"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
+        android:id="@+id/textView" />
+
+    <TextView
+    android:text="Known Issues: \n    Only SAMSUNG Galaxy S4 is tested,\n no guarantee on other device "
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
         android:id="@+id/textView3"
         android:layout_below="@+id/textView"
         android:layout_centerHorizontal="true" />
+
 
 
 
