--- a/app/src/main/res/layout/activity_flip.xml
+++ b/app/src/main/res/layout/activity_flip.xml
@@ -4,7 +4,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.intbridge.projects.projectgaucho.FlipActivity">
+    tools:context="com.intbridge.projects.gaucholife.FlipActivity">
 
     <TextView
         android:layout_width="wrap_content"
@@ -34,7 +34,7 @@
         android:layout_centerHorizontal="true" />
 
     <TextView
-        android:text="Changelog: \n    This is version 0.8 \n    Bug '0015' is fixed since version 0.7"
+        android:text="Changelog: \n    This is version 0.9 \n    Icons were updated since version 0.8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
