--- a/app/src/main/res/layout/action_bar_top.xml
+++ b/app/src/main/res/layout/action_bar_top.xml
@@ -1,39 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:gravity="end"
-    android:weightSum="1">
+<RelativeLayout
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/button"
+        android:background= "@drawable/button"
+        android:text="@string/flip"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        />
 
-    <RelativeLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
+    <SearchView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/searchView"
+        android:iconifiedByDefault="true"
+        android:inputType="textCapWords"
+        android:imeOptions="actionSearch"
+        android:queryHint="@string/search_hint"
+        android:layout_alignParentTop="true"
+        android:layout_toLeftOf="@+id/button" />
+</RelativeLayout>
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/button"
-            android:background= "@android:color/transparent"
-            android:text="@string/flip"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
-
-        <SearchView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/searchView"
-            android:iconifiedByDefault="true"
-            android:inputType="textCapWords"
-            android:imeOptions="actionSearch"
-            android:queryHint="@string/search_hint"
-            android:layout_alignParentTop="true"
-            android:layout_toLeftOf="@+id/button" />
-    </RelativeLayout>
-
-
-
-</LinearLayout>
