--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,61 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/container"
-    android:layout_width="match_parent" android:layout_height="match_parent"
-    tools:context="com.intbridge.projects.gaucholife.MainActivity" tools:ignore="MergeRootFrame" />
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/mainactivity"
+    xmlns:wang="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context="com.intbridge.projects.gaucholife.MainActivity" >
+
+    <FrameLayout
+        android:id="@+id/fragment_content"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1" />
+
+    <LinearLayout
+        android:background="@drawable/tab_bg_line"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:orientation="horizontal">
+
+        <com.intbridge.projects.gaucholife.IconWithTextView
+            android:id="@+id/tab_maps"
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            wang:pgicon="@drawable/maps"
+            android:padding="9dp"
+            wang:text="Maps"
+            wang:text_size="12sp"
+            wang:pgcolor="#ff45c01a"
+            />
+
+        <com.intbridge.projects.gaucholife.IconWithTextView
+            android:id="@+id/tab_dining"
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            wang:pgicon="@drawable/dining"
+            android:padding="9dp"
+            wang:text="Dining"
+            wang:text_size="12sp"
+            wang:pgcolor="#ff45c01a"
+            />
+
+        <com.intbridge.projects.gaucholife.IconWithTextView
+            android:id="@+id/tab_settings"
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            wang:pgicon="@drawable/cog"
+            android:padding="9dp"
+            wang:text="Setting"
+            wang:text_size="12sp"
+            wang:pgcolor="#ff45c01a"
+            />
+
+    </LinearLayout>
+
+    
+
+</LinearLayout>
