new framework, one activity and multi-fragment

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,8 @@
         android:background="@drawable/tab_bg_line"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:animateLayoutChanges="true">
 
         <com.intbridge.projects.gaucholife.IconWithTextView
             android:id="@+id/tab_maps"
