--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:orientation="horizontal"
-        android:animateLayoutChanges="true">
+        android:layout_gravity="bottom">
 
         <com.intbridge.projects.gaucholife.IconWithTextView
             android:id="@+id/tab_maps"
