--- a/app/src/main/res/layout/fragment_dining.xml
+++ b/app/src/main/res/layout/fragment_dining.xml
@@ -1,6 +1,5 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:wang="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/fragment_dining"
@@ -34,85 +33,18 @@
     <com.intbridge.projects.gaucholife.MultiSelectionIndicator
         android:id="@+id/msi_date"
         android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:orientation="horizontal"
-        wang:item_count="4"
-        android:background="@color/wallet_holo_blue_light">
+        android:layout_height="48dp"/>
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="短信1"
-            android:textColor="#CCFFFFFF"
-            android:textSize="16sp" />
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="收藏2"
-            android:textColor="#CCFFFFFF"
-            android:textSize="16sp" />
+    <com.intbridge.projects.gaucholife.MultiSelectionIndicator
+        android:id="@+id/msi_common"
+        android:layout_width="match_parent"
+        android:layout_height="48dp" />
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="推荐3"
-            android:textColor="#CCFFFFFF"
-            android:textSize="16sp" />
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="推荐4"
-            android:textColor="#CCFFFFFF"
-            android:textSize="16sp" />
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="推荐5"
-            android:textColor="#CCFFFFFF"
-            android:textSize="16sp" />
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="推荐6"
-            android:textColor="#CCFFFFFF"
-            android:textSize="16sp" />
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="推荐7"
-            android:textColor="#CCFFFFFF"
-            android:textSize="16sp" />
-    
-    </com.intbridge.projects.gaucholife.MultiSelectionIndicator>
-
-    <!--<com.intbridge.projects.gaucholife.MultiSelectionIndicator-->
-        <!--android:id="@+id/msi_common"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="?attr/actionBarSize" />-->
-
-    <!--<com.intbridge.projects.gaucholife.MultiSelectionIndicator-->
-        <!--android:id="@+id/msi_meal"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="?attr/actionBarSize" />-->
+    <com.intbridge.projects.gaucholife.MultiSelectionIndicator
+        android:id="@+id/msi_meal"
+        android:layout_width="match_parent"
+        android:layout_height="48dp" />
     
     <TextView
         android:id="@+id/testText"
