--- a/app/src/main/res/values/attr.xml
+++ b/app/src/main/res/values/attr.xml
@@ -13,11 +13,37 @@
         <attr name = "text_size"></attr>
     </declare-styleable>
 
-    <attr name="item_count" format="integer"></attr>
+    <!--<attr name="item_count" format="integer"></attr>-->
+
+    <!--<declare-styleable name="MultiSelectionIndicator">-->
+        <!--<attr name="item_count" />-->
+    <!--</declare-styleable>-->
 
     <declare-styleable name="MultiSelectionIndicator">
-        <attr name="item_count" />
+        <!--<attr name="pstsIndicatorColor" format="color" />-->
+        <!--<attr name="pstsIndicatorHeight" format="dimension" />-->
+        <!--<attr name="pstsUnderlineColor" format="color" />-->
+        <!--<attr name="pstsUnderlineHeight" format="dimension" />-->
+        <!--<attr name="pstsDividerColor" format="color" />-->
+        <!--<attr name="pstsDividerWidth" format="dimension" />-->
+        <!--<attr name="pstsDividerPadding" format="dimension" />-->
+        <!--<attr name="pstsScrollOffset" format="dimension" />-->
+        <!--<attr name="pstsShouldExpand" format="boolean" />-->
+        <!--<attr name="pstsPaddingMiddle" format="boolean" />-->
+        <!--<attr name="pstsTabPaddingLeftRight" format="dimension" />-->
+        <!--<attr name="pstsTabBackground" format="reference" />-->
+        <!--<attr name="pstsTabTextSize" format="dimension" />-->
+        <!--<attr name="pstsTabTextColor" format="reference" />-->
+        <!--<attr name="pstsTabTextStyle" format="reference">-->
+            <!--<flag name="normal" value="0x0" />-->
+            <!--<flag name="bold" value="0x1" />-->
+            <!--<flag name="italic" value="0x2" />-->
+        <!--</attr>-->
+        <!--<attr name="pstsTabTextAllCaps" format="boolean" />-->
+        <!--<attr name="pstsTabTextAlpha" format="integer" />-->
+        <!--<attr name="pstsTabTextFontFamily" format="string" />-->
     </declare-styleable>
+
 
 
 </resources>
