--- a/app/src/main/res/layout/fragment_dining.xml
+++ b/app/src/main/res/layout/fragment_dining.xml
@@ -29,22 +29,31 @@
         <!---->
         <!---->
         <!--</ViewPager>-->
-    
-    <com.intbridge.projects.gaucholife.MultiSelectionIndicator
-        android:id="@+id/msi_date"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"/>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:background="@drawable/pickerbackgroundcolorimage">
+
+        <com.intbridge.projects.gaucholife.MultiSelectionIndicator
+            android:id="@+id/msi_common"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"/>
+
+        <com.intbridge.projects.gaucholife.MultiSelectionIndicator
+            android:id="@+id/msi_date"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"/>
 
 
-    <com.intbridge.projects.gaucholife.MultiSelectionIndicator
-        android:id="@+id/msi_common"
-        android:layout_width="match_parent"
-        android:layout_height="48dp" />
+        <com.intbridge.projects.gaucholife.MultiSelectionIndicator
+            android:id="@+id/msi_meal"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"/>
 
-    <com.intbridge.projects.gaucholife.MultiSelectionIndicator
-        android:id="@+id/msi_meal"
-        android:layout_width="match_parent"
-        android:layout_height="48dp" />
+    </LinearLayout>
+
     
     <TextView
         android:id="@+id/testText"
