--- a/app/src/main/res/layout/tab_multiselectionindicator.xml
+++ b/app/src/main/res/layout/tab_multiselectionindicator.xml
@@ -5,4 +5,5 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
-    android:singleLine="true" />
+    android:singleLine="true"
+    android:textAllCaps="false"/>
