--- a/app/src/main/res/layout/fragment_dining_listview.xml
+++ b/app/src/main/res/layout/fragment_dining_listview.xml
@@ -3,8 +3,9 @@
     android:layout_height="match_parent"
     tools:context="com.intbridge.projects.gaucholife.DiningListViewFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView android:layout_width="match_parent" android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+    <se.emilsjolander.stickylistheaders.StickyListHeadersListView
+        android:id="@+id/list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
 </FrameLayout>
