--- a/app/src/main/res/layout/listview_dining_item.xml
+++ b/app/src/main/res/layout/listview_dining_item.xml
@@ -6,6 +6,7 @@
     android:background="#ffffff">
 
     <ImageView
+        android:id="@+id/listview_dining_item_heart"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingLeft="15dp"
