1. Favorite list is working 2. Dialog by SweetAlert 3. Set Dining background alpha to .7

--- a/app/src/main/res/layout/fragment_dining.xml
+++ b/app/src/main/res/layout/fragment_dining.xml
@@ -34,7 +34,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:background="@drawable/pickerbackgroundcolorimage">
+        android:background="@drawable/pickerbackgroundcolorimage"
+        android:alpha="0.7">
 
         <com.intbridge.projects.gaucholife.MultiSelectionIndicator
             android:id="@+id/msi_common"
