--- a/app/src/main/res/layout/listview_dining_item.xml
+++ b/app/src/main/res/layout/listview_dining_item.xml
@@ -18,8 +18,6 @@
         android:layout_height="wrap_content"
         android:paddingTop="15dp"
         android:paddingBottom="15dp"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-
-        />
+        android:textAppearance="?android:attr/textAppearanceMedium"/>
 
 </LinearLayout>
