Bug Fix -> restore the tab state V2(fix the transparent problem by set white background, cannot use show and hide to achieve, fragment transition is so strange.....)

--- a/app/src/main/res/layout/fragment_dining.xml
+++ b/app/src/main/res/layout/fragment_dining.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent"
     android:id="@+id/fragment_dining"
     android:orientation="vertical"
+    android:background="#ffffff"
     tools:context="com.intbridge.projects.gaucholife.DiningFragment">
 
     <LinearLayout
