--- a/app/src/main/res/layout/fragment_maps.xml
+++ b/app/src/main/res/layout/fragment_maps.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingTop="?android:attr/actionBarSize"
+    android:background="#ffffff"
     tools:context="com.intbridge.projects.gaucholife.MapsFragment">
 
     <com.google.android.gms.maps.MapView
