--- a/app/src/main/res/layout/fragment_maps.xml
+++ b/app/src/main/res/layout/fragment_maps.xml
@@ -3,7 +3,7 @@
     android:layout_height="match_parent"
     android:paddingTop="?android:attr/actionBarSize"
     android:background="#ffffff"
-    tools:context="com.intbridge.projects.gaucholife.MapsFragment">
+    tools:context="com.intbridge.projects.gaucholife.controllers.MapsFragment">
 
     <com.google.android.gms.maps.MapView
         xmlns:android="http://schemas.android.com/apk/res/android"
