--- a/app/src/main/res/layout/fragment_dining.xml
+++ b/app/src/main/res/layout/fragment_dining.xml
@@ -5,7 +5,7 @@
     android:id="@+id/fragment_dining"
     android:orientation="vertical"
     android:background="#ffffff"
-    tools:context="com.intbridge.projects.gaucholife.DiningFragment">
+    tools:context="com.intbridge.projects.gaucholife.controllers.DiningFragment">
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -14,18 +14,18 @@
         android:background="@drawable/pickerbackgroundcolorimage"
         android:alpha="0.7">
 
-        <com.intbridge.projects.gaucholife.MultiSelectionIndicator
+        <com.intbridge.projects.gaucholife.views.MultiSelectionIndicator
             android:id="@+id/msi_common"
             android:layout_width="match_parent"
             android:layout_height="42dp"/>
 
-        <com.intbridge.projects.gaucholife.MultiSelectionIndicator
+        <com.intbridge.projects.gaucholife.views.MultiSelectionIndicator
             android:id="@+id/msi_date"
             android:layout_width="match_parent"
             android:layout_height="42dp"/>
 
 
-        <com.intbridge.projects.gaucholife.MultiSelectionIndicator
+        <com.intbridge.projects.gaucholife.views.MultiSelectionIndicator
             android:id="@+id/msi_meal"
             android:layout_width="match_parent"
             android:layout_height="42dp"/>
